# pyironFlow

./: .gitignore  README.md  dataclass_tests.ipynb  demo.ipynb  demo_xyflow.ipynb  development.ipynb  environment.yml  graph_tools_demo.ipynb  gui_development.ipynb  ipytree.ipynb  macro.ipynb  package-lock.json  package.json  pyironflow_demo.ipynb  pyproject.toml  test.ipynb  to_Tilmann_MSE_2024_multiscale_V2.pptx  workflow_ideas.ipynb
.github/workflows/: delpoy.yml  deploy.yml
.ipynb_checkpoints/: demo-checkpoint.ipynb  macro-checkpoint.ipynb
docs/: user_guide.md
js/: CustomMacroNode.jsx  CustomMacroNodeExpanded.jsx  CustomNode.jsx  MacroNodeExpanded.jsx  MacroSubNode.jsx  backup  backup2.txt  ghostNode.jsx  nodes.jsx  useDagreLayout.jsx  useElkLayout.jsx  useLayoutNodes.jsx  widget.css  widget.jsx  widget.jsx.bak
js/.ipynb_checkpoints/: CustomMacroNode-checkpoint.jsx  CustomNode-Copy1-checkpoint.jsx  MacroInOutNode-checkpoint.jsx  MacroNode-checkpoint.jsx  MacroNodeExpanded-checkpoint.jsx  SubNode-checkpoint.jsx  ghostNode-checkpoint.jsx  useElkLayout-checkpoint.jsx  widget-checkpoint.jsx
lammps_macro/: recovery.pckl
notebooks/: pyironflow_demo.ipynb  workflow_multiscale_linear_elasticity_gui.ipynb
pyiron_nodes/: __init__.py  _version.py  blah.py  custom_macro.py  custom_node.py
pyironflow/: __init__.py  _version.py  code_editor.py  create_macro.py  macro.py  pyironflow.py  reactflow.py  themes.py  treeview.py  utilities.py  wf_extensions.py  widget.js
python/: create_macro.py  pyironflow.py  reactflow.py  treeview.py
static/: widget.js
(+11 files in other folders)
