[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiron_xyflow"
version = "0.0.1"
dependencies = ["anywidget", "traitlets"]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/pyiron_xyflow/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/pyiron_xyflow/static/widget.js"]
skip-if-exists = ["src/pyiron_xyflow/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
